# AtlasEngine

./: CMakeLists.txt  DevLogs.md  TestEntry.cpp  readme.md
Renderer/: CMakeLists.txt  MainRenderLoop.cpp  MainRenderLoop.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderData.cpp  RenderData.hpp  RenderObject.hpp
Util/: CMakeLists.txt  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp
Window/: EventLoop.cpp  EventLoop.hpp  Window.cpp  Window.hpp  cmakelists.txt
_dependencies/glad/include/glad/: glad.h
_dependencies/glad/src/: glad.c
